remove comic overlap

--- a/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
+++ b/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
@@ -37,7 +37,7 @@ Built in 1940, it had been a dream of Seattle engineer Homer Hadley since the 19
     alt="A blue and white map showing a birds eye view of the city of Seattle and the surrounding area."
     caption="Bird's eye view of Seattle and vicinity."/>
 
-<ComicSection overlap={50} rowHeight="4rem" elements={[
+<ComicSection rowHeight="4rem" elements={[
     {type:"image", alt:"A brightly colored drawing of a man wearing glasses, named Homer Hadley.",src:"/loc/seattle/bridgeAndTunnel/homer1.png",position:{col:3, row:3}, size:{width:1, height:2}}, 
     {type:"text", src:"As a port town, we should be very easy to get to! We must connect Seattle across Lake Washington.", position:{col:1, row:1}, size:{width:2, height:2}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 30}},
     {type:"text", src:"Homer Hadley, a Seattle engineer who first dreamed of building a bridge across Lake Washington.", position:{col:3, row:2}, size:{width:1, height:1}, style:{outline: "none", textAlign:"right"}, bubbleStyle: {tailDegree: 0}},
@@ -76,7 +76,7 @@ However, with the bridge approaching the land at water level, a tunnel would hav
     linkOut="https://www.loc.gov/resource/hhh.wa0182.photos/?sp=1"
     alt="A black and white photograph of two tunnels side-by-side dug into a ridge, there are trees and homes at the top of the ridge."
     caption="View of the Mount Baker Ridge Tunnel"/>
-<ComicSection overlap={50} elements={[
+<ComicSection  elements={[
     {type:"image",position:{col:2, row:1}, size:{width:1, height:2},src:"/loc/seattle/bridgeAndTunnel/medal.png"}
 ]}/>
 
@@ -88,7 +88,7 @@ However, with the bridge approaching the land at water level, a tunnel would hav
     linkOut="https://www.loc.gov/item/wa0442/"
     alt="A black and white photograph showing two bridges crossing a large body of water. There is traffic on both bridges flowing in opposite directions."
     caption="View of the Lacey V. Murrow Memorial Floating Bridge"/>
-<ComicSection overlap={50} elements={[
+<ComicSection  elements={[
     {type:"image",position:{col:2, row:1}, size:{width:1, height:2},src:"/loc/seattle/bridgeAndTunnel/medal2.png"}
 ]}/>
 
