--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -64,7 +64,7 @@ The Fireboat Duwamish is part of Seattle's firefighting fleet, and arrives when 
 <LOCItem
     type="pnp"
     image="/loc/seattle/firestationNo18/fireboat.png"
-    linkout="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1"
+    linkOut="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1"
     caption="The Fireboat Duwamish is the 'best preserved' example of an early 20th century fireboat. It can be seen docked at the Historic Ships Wharf in Lake Union Park."
     alt="A color photograph showing a large white and red fireboat docked in a harbor on a cloudy and gray day. "/>
 
