add WY stamps and esther prompt

--- a/src/app/content/sewy/civicCenter.mdx
+++ b/src/app/content/sewy/civicCenter.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/sewy/civicCenter/ad.jpg"
 cardImage: "/loc/sewy/civicCenter/ad.jpg"
-stampName:
+stampName: "/loc/sewy/misc/laramiestamp.png"
 photoPrompt:
 blurb:
 stickers: [{image: "/loc/sewy/civicCenter/schoolImage.png", linkOut: "https://www.loc.gov/resource/cph.3f05218/", title: "From poster promoting reading and library use, showing children near bookshelves."}, {image: "/loc/sewy/civicCenter/library.png", linkOut: "https://www.loc.gov/resource/hhh.wy0258.photos/?sp=6", title: "South front of the Aven Nelson Building, University of Wyoming."}, {image: "Photo of 'School No. 1' from an 1892 book of Laramie images", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=11&r=-0.092,-0.005,1.144,0.81,0"}]
