--- a/src/app/content/sewy/experimental.mdx
+++ b/src/app/content/sewy/experimental.mdx
@@ -4,12 +4,12 @@ locationTitle: High Plains Arboretum
 address:
 location: ["SEWY"] 
 latlon: [41.182366594140774, -104.89858294430296]
-neighborhood:
+neighborhood: Cheyenne
 zoom: 15
 tags: [""]
 cameraImage: "/loc/sewy/experimental/lgp2.jpg"
 cardImage: "/loc/sewy/experimental/lgp2.jpg"
-stampName:
+stampName:  "/loc/sewy/misc/cheyennestamp.png"
 photoPrompt:
 blurb:
 stickers: [{image: "/loc/sewy/experimental/ccc.jpg", linkOut: "https://www.loc.gov/item/92513367/", title: "Poster promoting the U.S. Civilian Conservation Corps"}, {image: "/loc/sewy/experimental/tree.png", linkOut: "https://www.loc.gov/resource/cph.3b48810/", title: "Poster promoting conservation of trees as a natural resource."}, {image: "/loc/sewy/experimental/jackson.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.storyofaccomplis00unse/?sp=31&q=jackson+lake+civilian+conservation+corps&r=-0.197,0.551,1.415,0.983,0", title: "CCC wrokers on Jackson Lake"}]
