--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -4,12 +4,12 @@ locationTitle: S. H. Knight Geology Building
 address:
 location: ["SEWY"]
 latlon: [41.314328970079494, -105.5833908476826]
-neighborhood: Centennial
+neighborhood: Cheyenne
 zoom: 15
 tags: ["albany"]
 cameraImage: "/loc/sewy/knight/classroom.png"
 cardImage: "/loc/sewy/knight/classroom.png"
-stampName:
+stampName:  "/loc/sewy/misc/cheyennestamp.png"
 photoPrompt:
 blurb:
 stickers: [{image: "/loc/sewy/knight/dino.png", title: "Photo of S.H. Knight's Tyrannosaurus sculpture from Gates Frontiers Fund Wyoming Collection within the Carol M. Highsmith Archive", linkOut: "https://www.loc.gov/resource/highsm.32798/?r=0.509,0.12,0.579,0.398,0"},{image: "/loc/sewy/knight/vehicleSticker.png"},{image: "/loc/sewy/knight/fossil.png",title: "Print of a fossil", linkOut: "https://www.loc.gov/resource/pga.06720/"}]
