--- a/src/app/content/sewy/lovejoy.mdx
+++ b/src/app/content/sewy/lovejoy.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/sewy/lovejoy/highwaymap.jpg"
 cardImage: "/loc/sewy/lovejoy/highwaymap.jpg"
-stampName:
+stampName:  "/loc/sewy/misc/laramiestamp.png"
 photoPrompt:
 blurb:
 stickers: [{image: "/loc/sewy/lovejoy/car.png", title: "Ad for Lovejoy Novelty Works in Wyoming auto guide",linkOut: "https://www.loc.gov/resource/gdcmassbookdig.wyomingautoguide00unse/?sp=37&r=-0.632,0.802,2.264,1.557,0"}, {image: "/loc/sewy/lovejoy/franklin.png", title: "Ad for Lovejoy Novelty Works, who dealt Franklin Motor Cars", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.wyomingautoguide00unse/?sp=37&r=-0.089,0.9,1.092,0.751,0"}, {image: "/loc/sewy/lovejoy/wy.png", title: "Part of National Highway Map proposed in 1913", linkOut: "https://www.loc.gov/resource/gdcwdl.wdl_11537/?r=0.268,0.278,0.192,0.132,0"}, {image: "/loc/sewy/lovejoy/horse2.png"}]
