--- a/src/app/content/sewy/morris.mdx
+++ b/src/app/content/sewy/morris.mdx
@@ -9,9 +9,9 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/sewy/morris/spc.jpg"
 cardImage: "/loc/sewy/morris/spc.jpg"
-stampName: 
-photoPrompt: VVN TODO. Mention the statue.
-blurb: VVN TODO.
+stampName:  "/loc/sewy/misc/cheyennestamp.png"
+photoPrompt: A statue of Morris sits in front of the Capitol, which mirrors the one at the US Capitol. Take photos and explore the area.
+blurb:
 stickers: [{image: "/loc/sewy/morris/poster.png", linkOut: "https://www.loc.gov/resource/yan.1a38589/", title: "Poster featuring Morris by The National Organization for Women"}, {image: "/loc/sewy/morris/southPass.jpg", title: "Photo of a Cabin in South Pass City", linkOut: "https://www.loc.gov/resource/highsm.38568/"}, {image: "/loc/sewy/morris/capitol.png", title: "Wyoming Capitol from Carol M. Highsmith Archive" , linkOut: "https://www.loc.gov/resource/highsm.16996/?r=0.342,1.112,0.256,0.176,0"}, {image: "/loc/sewy/morris/statue.png", title: "Statue of Esther Hobart Morris from Carol M. Highsmith Archive", linkOut: "https://www.loc.gov/resource/highsm.16996/?r=0.292,1.083,0.364,0.25,0"}]
 ---
 
