--- a/src/app/content/sewy/atlas.mdx
+++ b/src/app/content/sewy/atlas.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/sewy/atlas/exterior.jpg"
 cardImage: "/loc/sewy/atlas/exterior.jpg"
-stampName:
+stampName: "/loc/sewy/misc/cheyennestamp.png"
 photoPrompt: 
 blurb: 
 stickers: [{image: "/loc/sewy/atlas/theatre.png",title: "General view of facade", linkOut: "https://www.loc.gov/resource/hhh.wy0017.photos/?sp=2&st=image"}, {image: "/loc/sewy/atlas/atlas.png", title: "Newspaper clipping from The Wyoming tribune", linkOut: "https://www.loc.gov/resource/sn83025231/1908-04-30/ed-1/?sp=2&q=atlas+theatre&r=0.161,0.049,0.5,0.35,0"},{image: "/loc/sewy/atlas/hat.png", title: "Positive paper print from lantern slide used in motion picture theaters as announcement.", linkOut: "https://www.loc.gov/item/2012645955/"}]
