--- a/src/app/content/sewy/libertyBell.mdx
+++ b/src/app/content/sewy/libertyBell.mdx
@@ -9,9 +9,9 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/sewy/libertyBell/libertyBell.jpg"
 cardImage: "/loc/sewy/libertyBell/libertyBell.jpg"
-stampName:
-photoPrompt: VVN TODO
-blurb: VVN TODO
+stampName:  "/loc/sewy/misc/cheyennestamp.png"
+photoPrompt: 
+blurb: 
 stickers: [{image: "/loc/sewy/libertyBell/poster.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.50985/", title: "1917 poster from Liberty Loan"}, {image: "/loc/sewy/libertyBell/stereograph.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s15233/", title: "1876 Stereograph"}, {image: "/loc/sewy/libertyBell/ringing.png", linkOut: "https://www.loc.gov/resource/music.muswwism-200210159/?sp=1&r=-0.261,0.099,1.553,1.068,0", title: "Sheet music, 'Our Liberty Bell'"}, {image: "/loc/sewy/libertyBell/bellSticker.png"}]
 ---
 
