--- a/src/app/content/sewy/lightPlant.mdx
+++ b/src/app/content/sewy/lightPlant.mdx
@@ -9,7 +9,7 @@ zoom: 15
 tags: [""]
 cameraImage: "/loc/sewy/lightPlant/cleveland.jpg"
 cardImage: "/loc/sewy/lightPlant/cleveland.jpg"
-stampName:
+stampName: "/loc/sewy/misc/laramiestamp.png"
 photoPrompt:
 blurb:
 stickers: [{image: "/loc/sewy/lightPlant/complete.png", title: "Swan Lamp Complete from book", linkOut: "https://www.loc.gov/resource/gdcscd.00337706836/?sp=25&st=image&r=0.113,0.418,0.735,0.511,0"},{image: "/loc/sewy/lightPlant/bracket.png", title: "Swan Bracket Lamp from book", linkOut: "https://www.loc.gov/resource/gdcscd.00337706836/?sp=25&st=image&r=0.113,0.418,0.735,0.511,0"},{image: "/loc/sewy/lightPlant/lightPlant.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&r=0.092,0.756,1.011,0.703,0", title: "Photo of Plaining Mill and Electric Light Plant"}, {image: "/loc/sewy/lightPlant/sanborn.png", linkOut: "https://www.loc.gov/resource/g4264lm.g097661907/?sp=3&st=image&r=-0.007,0.702,0.428,0.303,0", title: "Insurance map of the Laramie Light & Power Co."}]
