--- a/src/app/content/chicago/hullHouse.mdx
+++ b/src/app/content/chicago/hullHouse.mdx
@@ -15,15 +15,15 @@ blurb:
 stickers: [{image: "/loc/chicago/hullHouse/postCard.jpg", linkOut: "https://www.loc.gov/resource/pcrd.1a03955/"},{image: "/loc/chicago/hullHouse/workshop.png", linkOut: "https://www.loc.gov/resource/cph.3f05215/"}, {image: "/loc/chicago/hullHouse/library.png",title: "photo of Hull House library, excerpt from book" , linkOut: "https://www.loc.gov/resource/gdclccn.2006700092/?sp=7&r=-0.687,-0.073,2.375,1.634,0"}]
 ---
 
-<LOCItem type="pnp" image="/loc/chicago/hullHouse/postCard.jpg" linkOut="https://www.loc.gov/resource/pcrd.1a03955/"/>
+<LOCItem type="pnp" image="/loc/chicago/hullHouse/postCard.jpg" caption="Hull House in 1950" linkOut="https://www.loc.gov/resource/pcrd.1a03955/" alt="Color postcard of Hull House, a large multi-storied brick building."/>
 
-Hull House was a settlement house founded by Jane Addams and Ellen Gates Starr in 1889. It started as a space for college-educated women to provide free classes to the local working class residents, many of them recent immigrants. Their subjects were mostly cultural, with classes such as history, art, literature, sewing, and domestic activities. 
+Hull House was a settlement house founded by Jane Addams and Ellen Gates Starr in 1889. It started as a space for college-educated women to provide free classes to local working class residents, many of them recent immigrants. Their subjects were mostly cultural, with classes such as history, art, literature, sewing, and domestic activities. 
 
-<LOCItem type="pnp" caption="Poster for Illinois Art Project poster show in 1936" image="/loc/chicago/hullHouse/postershow.jpg" linkOut="https://www.loc.gov/resource/cph.3b48753/"/>
+<LOCItem type="pnp" caption="Poster for Illinois Art Project poster show in 1936" image="/loc/chicago/hullHouse/postershow.jpg" linkOut="https://www.loc.gov/resource/cph.3b48753/" alt="An abstract color poster advertising a poster show at Hull House as part of the Illinois Art Project."/>
 
-Over time, the scale of Hull House grew. Jane Addams believed that theater was important for community, and founded a theater group that would perform in the community’s local language. They also expanded to offer more services to help people affected by poverty, such as daycare, food, and public baths. And over time, seeing that things needed to change at a legislative level, member of Hull House started to advocate for labor rights, immigrant rights, child labor laws, and occupational safety.
+Over time, the scale of Hull House grew. Jane Addams believed that theater was important for community, and founded a theater group that would perform in the community’s local language. They also expanded to offer more services to help people affected by poverty, such as daycare, food, and public baths. And over time, seeing that things needed to change at a legislative level, members of Hull House started to advocate for labor rights, immigrant rights, child labor laws, and occupational safety.
 
-From an individual perspective, many people who were involved with Hull House took the skills that they gained there into larger careers. One example is, Sadie Ellis Garland Dreikurs, the matriarch of art therapy, who had her beginnings in Hull House’s art classes.  Influenced from Hull House’s social work, Sadie developed her techniques to use art as a self-expression tool for therapy.
+From an individual perspective, many people who were involved with Hull House took the skills that they gained there into larger careers. One example is, Sadie Ellis Garland Dreikurs, the matriarch of art therapy, who had her beginnings in Hull House’s art classes.  Influenced by Hull House’s social work, Sadie developed her techniques to use art as a self-expression tool for therapy.
 
 Another long-term Hull House  resident was Hilda Satt Polacheck. Arriving in Chicago  at 10 years old after immigrating from Poland, Hilda lived in Chicago’s Jewish immigrant neighborhood in Near West Side. She didn’t start getting involved with Hull House until she was 18, where she took on a position to demonstrate cloth making at the Hull-House Labor Museum. With some encouragement from Jane Addams, Hilda started to explore writing through Hull House’s English composition class. From there, her writing took off -- she wrote articles and plays that were performed through the Chicago Hebrew Institute, and was sponsored to attend the University of Chicago for a quarter.
 
@@ -31,17 +31,17 @@ In 1938, Hilda was hired as a writer for the Works Progress Administration to ca
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
    {type:"text", src:"Songs and Yells of Steel Workers", position:{col:3, row:1}, size:{width:5, height:2}, style:{outline:"none",fontSize:"2rem", color:"purple", backgroundColor:"pink"}},
-   {type:"image", src:"/loc/chicago/hullHouse/steel.png", position:{col:1, row:2}, size:{width:9, height:22}},
-   {type:"text", src:"Collected songs and calls used during the 1937 steel strike. Told by Ida Rinas.", position:{col:2, row:13}, size:{width:5, height:2}, style:{outline:"box",fontSize:"1.1rem", backgroundColor: "white"}},
+   {type:"image", src:"/loc/chicago/hullHouse/steel.png", alt:"A line drawing of Hilda interviwing Ida Rinas. The two women sit in a room across from each other in two large arm chairs. There is a small table with a lamp between them and they are mid conversation. Ida's speech bubble has a smaller drawing of protestors holding picket signs.",position:{col:1, row:2}, size:{width:9, height:22}},
+   {type:"text", src:"She collected songs and calls used during the 1937 steel strike, as told by Ida Rinas.", position:{col:2, row:13}, size:{width:5, height:2}, style:{outline:"box",fontSize:"1.1rem", backgroundColor: "white"}},
 ]}/>
 <ComicSection cols={9} rowHeight="2rem" elements={[
    {type:"text", src:"Spontaneous stories by young children", position:{col:2, row:1}, size:{width:5, height:2}, style:{outline:"none",fontSize:"2rem", color:"blue", backgroundColor:"lime"}},
-   {type:"image", src:"/loc/chicago/hullHouse/children.png", position:{col:1, row:2}, size:{width:9, height:20}},
+   {type:"image", src:"/loc/chicago/hullHouse/children.png", alt:"A colorful drawing of Hilda seated on a park bench interviewing a small boy. The boy's speech bubble has a smaller drawing of two, large colorful animals.", position:{col:1, row:2}, size:{width:9, height:20}},
    {type:"text", src:"At Blackhawk Park, Hilda collected stories from children (some as young as three years old).", position:{col:5, row:17}, size:{width:5, height:2}, style:{outline:"box",fontSize:"1.1rem", backgroundColor: "white"}},
 ]}/>
 <ComicSection cols={9} rowHeight="2rem" elements={[
    {type:"text", src:"Dust", position:{col:2, row:1}, size:{width:3, height:2}, style:{outline:"none",fontSize:"2rem", color:"orange", backgroundColor:"beige"}},
-   {type:"image", src:"/loc/chicago/hullHouse/dust.png", position:{col:1, row:2}, size:{width:9, height:20}},
+   {type:"image", src:"/loc/chicago/hullHouse/dust.png", alt:"A colorful drawing of Hilda interviewing Jacob. They are seated across from each other in wooden chairs. Jacob's speech bubble has a smaller drawing of himself as a boy learning piano at Hull House.",position:{col:1, row:2}, size:{width:9, height:20}},
    {type:"text", src:"The story of Jacob Saranoff and his son Solly who took piano classes at Hull House.", position:{col:5, row:17}, size:{width:5, height:2}, style:{outline:"box",fontSize:"1.1rem", backgroundColor: "white"}},
 ]}/>
 
