--- a/src/app/content/chicago/muddyWaters.mdx
+++ b/src/app/content/chicago/muddyWaters.mdx
@@ -15,34 +15,34 @@ blurb:
 stickers: [{image: "/loc/chicago/muddyWaters/burr.jpg", title: "Burr Clover Blues card catalog, recording of Muddy Waters taken by Alan Lomax",linkOut: "https://www.loc.gov/item/afc9999005.18892/"},{image: "/loc/chicago/muddyWaters/record.png", title: "Chicago bound blues sung by Bessie Smith", linkOut: "https://www.loc.gov/resource/jukebox-672304.1?r=-0.301,-0.073,1.615,1.111,0"}]
 ---
 
-Muddy Waters was a Chicago blues musician in the mid-1900s whose guitar and musical stylings influenced the development of music we hear today.
+Muddy Waters was a Chicago blues musician in the mid-1900s whose guitar and musical stylings influenced the development of the music we hear today.
 
-Muddy Waters grew up in the Mississippi Delta and started playing the guitar at 17. He toured with local bands, and played at various dances, parties, picnics, and events. Alan Lomax, a folklorist and archivist working with the Library of Congress, came to record Muddy Waters to capture the rural blues music.
+Muddy Waters grew up in the Mississippi Delta and started playing the guitar at 17. He toured with local bands, and played at various dances, parties, picnics, and events. Alan Lomax, a folklorist and archivist working with the Library of Congress, went to Mississippi to record Muddy Waters and capture the sounds of rural blues music.
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"By 1941, when Muddy Waters was recorded by Lomax, Muddy was already an experienced musician. He had a lot of experience performing live, so when Lomax went down to Mississippi to record Son House, he heard of Muddy's talent and went to record him as well.", position:{col:1, row:1}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/muddyWaters/r1.jpg", position:{col:1, row:1}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/muddyWaters/r1.jpg", alt:"A color comic of a young Muddy Waters playing the guitar for Alan Lomax. They are seated across from each other with Lomax's recording equipment between them.", position:{col:1, row:1}, size:{width:9, height:10}},
     {type:"text", src:"Muddy had never heard himself recorded before, and it was when he heard Lomax's recording that he realized:", position:{col:1, row:10}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
     {type:"text", src:"Oh. I sound like all the other people on records.", position:{col:6, row:15}, size:{width:3, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/muddyWaters/r2.jpg", position:{col:3, row:11}, size:{width:6, height:8}},
+    {type:"image", src:"/loc/chicago/muddyWaters/r2.jpg", alt:"A color comic panel of a young Muddy Waters wearing headphones and looking surprised.", position:{col:3, row:11}, size:{width:6, height:8}},
 ]}/>
-<LOCItem type="manuscript" image="/loc/chicago/muddyWaters/lomax.jpg" captions="Notes from Alan Lomax when meeting with Muddy Waters. He notes that Muddy Waters can tune his guitar in three ways - Natural, Spanish, and E minor, his favorite song is 'I Be's Troubled', and he owns a Victrola." linkOut="https://www.loc.gov/resource/afc2004004.ms070208/?sp=18"/>
-<LOCItem type="pnp" image="/loc/chicago/muddyWaters/c.jpg" caption="Card catalog image, of I Be's Troubled, Muddy Waters' favorite song." linkOut="https://www.loc.gov/item/afc9999005.34566/"/>
+<LOCItem type="manuscript" image="/loc/chicago/muddyWaters/lomax.jpg" caption="Notes from Alan Lomax when meeting with Muddy Waters. He notes that Muddy Waters can tune his guitar in three ways - Natural, Spanish, and E minor, his favorite song is 'I Be's Troubled', and he owns a Victrola." linkOut="https://www.loc.gov/resource/afc2004004.ms070208/?sp=18" alt="A photograph of Alan Lomax's open notebook. The lined page is scribbled with notes written in pen ink. "/>
+<LOCItem type="pnp" image="/loc/chicago/muddyWaters/c.jpg" caption="Card catalog image, of I Be's Troubled, Muddy Waters' favorite song." linkOut="https://www.loc.gov/item/afc9999005.34566/" alt="A black and white scan of the I Be's Troubled catalog card. The card is scribbled with various notes."/>
 
-When the record was pressed, Muddy Waters received a couple of copies and $20 in the mail. He immediately played the record on his machine, and soon after, in 1943, he left for Memphis and then Chicago to pursue a full time music career.
+When the record was pressed, Muddy Waters received a couple of copies and $20 in the mail. He immediately played the record on his machine, and soon after, in 1943, he left for Memphis and then Chicago to pursue a full-time music career.
 
 The first few years in Chicago were difficult -- life as a Black musician in the city posed extra challenges, but he and other migrant musicians were persistent. Banned from certain venues who would only hire white musicians, they would create their own opportunities by playing on popular market streets such as the Maxwell Street Market District.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"It wasn't easy playing music on the street; by this time, Muddy Waters had transitioned from an acoustic guitar to an electric one to be better heard in noisy venues.", position:{col:1, row:1}, size:{width:9, height:1}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/muddyWaters/e1.jpg", position:{col:1, row:3}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/muddyWaters/e1.jpg", alt:"A color illustration of a young Muddy Waters in a suit and tie standing in a busy street with his guitar and a microphone.", position:{col:1, row:3}, size:{width:9, height:10}},
     {type:"text", src:"If I pay you for the electricity, can I plug into your apartment?", position:{col:1, row:11}, size:{width:4, height:3}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/muddyWaters/e2.jpg", position:{col:2, row:11}, size:{width:8, height:10}},
+    {type:"image", src:"/loc/chicago/muddyWaters/e2.jpg", alt:"A comic illustration of a young Muddy Waters in mid conversation on a sidewalk with someone leaning out a window of their home. ", position:{col:2, row:11}, size:{width:8, height:10}},
     {type:"text", src:"yeah sure", position:{col:5, row:18}, size:{width:3, height:1}, style:{outline:"bubble"}},
     {type:"image", src:"/loc/chicago/muddyWaters/e3.jpg", position:{col:1, row:23}, size:{width:9, height:8}},
     {type:"text", src:"....do you have an extension cord?", position:{col:4, row:28}, size:{width:4, height:3}, style:{outline:"bubble"}},
 ]}/>
 
-After a couple of years and many setbacks, Muddy Waters recorded several hit songs, which cascaded his career into commercial success and eventually his influence into infamy.
+After a couple of years and many setbacks, Muddy Waters recorded several hit songs, which catapulted him to commercial success. He would eventually be known as the "father of Chicago blues." 
 
 This is the location of Muddy's former home -- the first he ever purchased in Chicago. It is on the National Register of Historic Places and has been designated a Chicago Landmark. 43rd Ave, the street leading up to his neighborhood, was dedicated "Muddy Waters Drive" in his honor.
 
