--- a/src/app/content/sewy/depot.mdx
+++ b/src/app/content/sewy/depot.mdx
@@ -11,7 +11,7 @@ cameraImage: "/loc/sewy/depot/map1907.jpg"
 cardImage: "/loc/sewy/depot/map1907.jpg"
 stampName: "/loc/sewy/misc/laramiestamp.png"
 photoPrompt:
-blurb:
+blurb: Fire and other natural disasters often shape how cities grow and develop. Learn about the role fire played in the building of the historic hotel and train depot.
 stickers: [{image: "/loc/sewy/depot/rollingMillsSticker.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&r=-0.053,0.39,1.03,0.716,0", title: "Picture of Rolling Mills from 1892 book."},{image: "/loc/sewy/depot/lifeline.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.30679/", title: "Life-line of the nation American railroads poster"}, {image: "/loc/sewy/depot/montana.png", title: "Travel poster shows steam engine pulling cars through Bozeman Pass.", linkOut: "https://www.loc.gov/resource/cph.3g14974/" },{image: "/loc/sewy/depot/m.png", title: "Floor plan of former Union Pacific Rolling Mills, 1907", linkOut: "https://www.loc.gov/resource/g4264lm.g097661907/?sp=5&st=image&r=0.547,0.732,0.481,0.331,0"}]
 ---
 
