--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -11,7 +11,7 @@ cameraImage: "/loc/sewy/knight/classroom.png"
 cardImage: "/loc/sewy/knight/classroom.png"
 stampName:  "/loc/sewy/misc/cheyennestamp.png"
 photoPrompt:
-blurb:
+blurb:  Dr. Samuel H. Knight dedicated his life to the study of Geology, and to educating others through Wyoming’s landscape and rich geological history. Read on to learn about the science camp he started and to see the T-Rex statue he built!
 stickers: [{image: "/loc/sewy/knight/dino.png", title: "Photo of S.H. Knight's Tyrannosaurus sculpture from Gates Frontiers Fund Wyoming Collection within the Carol M. Highsmith Archive", linkOut: "https://www.loc.gov/resource/highsm.32798/?r=0.509,0.12,0.579,0.398,0"},{image: "/loc/sewy/knight/vehicleSticker.png"},{image: "/loc/sewy/knight/fossil.png",title: "Print of a fossil", linkOut: "https://www.loc.gov/resource/pga.06720/"}]
 ---
 
