--- a/src/app/content/chicago/ashland.mdx
+++ b/src/app/content/chicago/ashland.mdx
@@ -7,12 +7,12 @@ latlon: [41.8852, -87.6669]
 neighborhood: Ashland
 zoom: 15
 tags: [""]
-cameraImage: "/loc/chicago/ashland/rockIsland.png"
+cameraImage: "/loc/chicago/ashland/tracks.jpg"
 cardImage: "/loc/chicago/ashland/tracks.jpg"
 stampName: "/illustrations/chicagoPink.png"
 photoPrompt:
-blurb:
-stickers: [{image: "/loc/chicago/ashland/rockIsland.png", linkOut: "https://www.loc.gov/resource/g4104c.pm001523/?r=-0.076,0.544,0.531,0.365,0"},{image: "/loc/chicago/ashland/rail.jpg", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.onehundredphotog01rand/?sp=119&q=elevated+railroad"}]
+blurb: The Chicago transit system as we know it today, is the result of numerous smaller private lines merging together over time. Read on to learn how one of the older transit systems in the US started out.
+stickers: [{image: "/loc/chicago/ashland/rockIsland.png", linkOut: "https://www.loc.gov/resource/g4104c.pm001523/?r=-0.076,0.544,0.531,0.365,0"},{image: "/loc/chicago/ashland/rail.jpg", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.onehundredphotog01rand/?sp=119&q=elevated+railroad"},{image: "/illustrations/chicagoPink.png"}]
 ---
 
 Chicago’s transit system is very notable - it is one of only 3 cities in the world to offer 24-hour service on parts of its lines, it is the second oldest system in the United States, and has the longest subway platform in the world. This network of rails took a long time to come together, and started in 1888.
