--- a/src/app/content/chicago/canal.mdx
+++ b/src/app/content/chicago/canal.mdx
@@ -1,5 +1,5 @@
 ---
-title: A River Reversed
+title: One of the US's greatest engineering projects of all time
 locationTitle: Canal Origins Park
 address: 2701 S Ashland Ave
 location: ["Chicago"] 
@@ -11,8 +11,8 @@ cameraImage: "/loc/chicago/canal/c.jpg"
 cardImage: "/loc/chicago/canal/waterwaymap.jpg"
 stampName: "/illustrations/chicagoOrange.png"
 photoPrompt: "There are mosaics, sculptures, and signs that tell the story of the canal and its impact on Chicago. Explore the park and continue onto the riverwalk, where you can watch watercraft sail by."
-blurb:
-stickers: [{image: "/loc/chicago/canal/engineerLogo.png", linkOut: "https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"},{image: "/loc/chicago/canal/il.png", linkOut: "https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"},{image: "/loc/chicago/canal/camps.png", linkOut: "https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.684,0.288,0.414,0.285,0"},{image: "/loc/chicago/canal/ditch.png", linkOut: "https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.045,-0.027,0.3,0.207,0"}]
+blurb:  In order to solve a water crisis, Chicago literally reversed course. The Chicago Sanitary and Ship Canal was one of the largest construction projects in history and helped the city grow into the metropolis it is today. 
+stickers: [{image: "/loc/chicago/canal/engineerLogo.png", linkOut: "https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"},{image: "/loc/chicago/canal/il.png", linkOut: "https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"},{image: "/loc/chicago/canal/camps.png", linkOut: "https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.684,0.288,0.414,0.285,0"},{image: "/loc/chicago/canal/ditch.png", linkOut: "https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.045,-0.027,0.3,0.207,0"},{image: "/illustrations/chicagoOrange.png"}]
 ---
 
 Water can make or break a city -- not only is it necessary to find a clean source to drink, but being near water can often accelerate a city’s growth as a center of commerce and transportation.
