--- a/src/app/content/chicago/cpl.mdx
+++ b/src/app/content/chicago/cpl.mdx
@@ -11,13 +11,13 @@ cameraImage: "/loc/chicago/cpl/building.jpg"
 cardImage: "/loc/chicago/cpl/building.jpg"
 stampName: "/illustrations/chicagoLoop.png"
 photoPrompt: "The original Chicago Public Library building is now the Chicago Cultural Center. Explore its architecture, and keep an eye out for the stained glass domes and glass mosaics."
-blurb: ""
-stickers: [{image: "/loc/chicago/cpl/s.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.796,0.179,0.203,0.139,0"},{image: "/loc/chicago/cpl/postcard.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03874/"}, {image: "/loc/chicago/cpl/poster.png", title: "Hull-House community workshop", linkOut: "https://www.loc.gov/item/98513471/"}, {image: "/loc/chicago/cpl/staircase.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s12353/"}, {image: "/loc/chicago/cpl/cplSticker.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03991/"}]
+blurb: "Fire and libraries don't mix, but in the case of the Chicago Public Library the Great Fire triggered a series of events that made the city’s first public library possible."
+stickers: [{image: "/loc/chicago/cpl/s.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.796,0.179,0.203,0.139,0"},{image: "/loc/chicago/cpl/postcard.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03874/"}, {image: "/loc/chicago/cpl/poster.png", title: "Hull-House community workshop", linkOut: "https://www.loc.gov/item/98513471/"}, {image: "/loc/chicago/cpl/staircase.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s12353/"}, {image: "/loc/chicago/cpl/cplSticker.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03991/"}, {image: "/illustrations/chicagoLoop.png"}]
 ---
 
 <LOCItem caption="Stereograph of the Chicago fire ruins." type="pnp" image="/loc/chicago/cpl/stereograph.jpg" linkOut="https://www.loc.gov/resource/stereo.1s41365/" alt="Sepia stereograph of the ruins of the Chicago fire."/>
 
-The Chicago Public Library was born out of the ruins of the Great Fire. In the fire’s aftermath, two Englishmen collected and gifted 8,000 books to the city as an act of “brotherly kindness.”
+The Chicago Public Library was born out of the ruins of the Great Fire in 1871. In the fire’s aftermath, two Englishmen collected and gifted 8,000 books to the city as an act of “brotherly kindness.”
 
 Prior to the fire, there were no public libraries, so the next task was to find a physical location for  such a large donation. Over the next two decades, the library moved from one temporary location to the next, including a water tank and the fourth floor of City Hall.
 
