alt text for lincoln park

--- a/src/app/content/chicago/lincolnPark.mdx
+++ b/src/app/content/chicago/lincolnPark.mdx
@@ -17,7 +17,7 @@ stickers: [{image: "/loc/chicago/lincolnPark/sculptures.png", title: "King and Q
 
 All the way over in Washington DC is the National Statuary Hall - with two statues for each state, over 100 statues stand representing some of the most notable people in American history. But much closer to home, Lincoln Park is known as Chicago’s outdoor Statuary Hall. With so many other fun things to do, it’s easier to overlook these stationary figures. However, learning some of the stories behind them make it more fun to stop and look around!
 
-<ComicSection cols="9" rowHeight="2rem" elements={[{type: "image",src: "/loc/chicago/lincolnPark/walkingmap.png", position: {col:2, row:1}, size:{width:7, height:17}}]}/>
+<ComicSection cols="9" rowHeight="2rem" elements={[{type: "image",src: "/loc/chicago/lincolnPark/walkingmap.png", position: {col:2, row:1}, size:{width:7, height:17}, alt: "Illustrated map of Lincoln Park, with three statues drawn and pointing to spots on the map."}]}/>
 
 <LOCItem type="book" image="/loc/chicago/lincolnPark/es.jpg" caption="Drawing of Swedish scientist Emanuel Swedenborg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.documentsconcern00tafe/?sp=14&r=-0.834,-0.524,2.667,1.835,0" alt="A line drawing of Emanuel Swedenborg, he wears a white powdered wig and a three piece suit." />
 
