--- a/src/app/content/chicago/graceland.mdx
+++ b/src/app/content/chicago/graceland.mdx
@@ -11,8 +11,8 @@ cameraImage: "/loc/chicago/graceland/getty.jpg"
 cardImage: "/loc/chicago/graceland/getty.jpg"
 stampName: "/illustrations/chicagoRed.png"
 photoPrompt:
-blurb:
-stickers: [{image: "/loc/chicago/graceland/west.png", title: "West Face of Ryerson Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0942.sheet/?sp=2"}, {image: "/loc/chicago/graceland/honore.png", title: "Honore Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0941.sheet/?sp=2"}, {image: "/loc/chicago/graceland/getty.png", title: "Getty Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0120.sheet/?sp=2&st=image"}]
+blurb: Graceland Cemetery is a who’s who of Chicago and also architecture. Learn about the famous Chicagoans buried here and the notable architects who memorialized them.
+stickers: [{image: "/loc/chicago/graceland/west.png", title: "West Face of Ryerson Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0942.sheet/?sp=2"}, {image: "/loc/chicago/graceland/honore.png", title: "Honore Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0941.sheet/?sp=2"}, {image: "/loc/chicago/graceland/getty.png", title: "Getty Tomb" ,linkOut: "https://www.loc.gov/resource/hhh.il0120.sheet/?sp=2&st=image"}, {image: "/illustrations/chicagoRed.png"}]
 ---
 
 Sitting along side the northern branch of the Red Line is the Graceland Cemetery -- covering 119 acres, you’ll find the final resting places of many old Chicago names like Kate Warne, the first female detective, and William Wallace Kimball, the founder of Kimball Pianos.
