--- a/src/app/content/chicago/hullHouse.mdx
+++ b/src/app/content/chicago/hullHouse.mdx
@@ -11,8 +11,8 @@ cameraImage: "/loc/chicago/hullHouse/postCard.jpg"
 cardImage: "/loc/chicago/hullHouse/postCard.jpg"
 stampName: "/illustrations/chicagoBlue.png"
 photoPrompt:
-blurb:
-stickers: [{image: "/loc/chicago/hullHouse/postCard.jpg", linkOut: "https://www.loc.gov/resource/pcrd.1a03955/"},{image: "/loc/chicago/hullHouse/workshop.png", linkOut: "https://www.loc.gov/resource/cph.3f05215/"}, {image: "/loc/chicago/hullHouse/library.png",title: "photo of Hull House library, excerpt from book" , linkOut: "https://www.loc.gov/resource/gdclccn.2006700092/?sp=7&r=-0.687,-0.073,2.375,1.634,0"}]
+blurb: Hull House has been an incubator for art, talent and community for decades. Read on to see how this settlement house nurtured, inspired and cultivated countless talents, and dreams.
+stickers: [{image: "/loc/chicago/hullHouse/postCard.jpg", linkOut: "https://www.loc.gov/resource/pcrd.1a03955/"},{image: "/loc/chicago/hullHouse/workshop.png", linkOut: "https://www.loc.gov/resource/cph.3f05215/"}, {image: "/loc/chicago/hullHouse/library.png",title: "photo of Hull House library, excerpt from book" , linkOut: "https://www.loc.gov/resource/gdclccn.2006700092/?sp=7&r=-0.687,-0.073,2.375,1.634,0"}, {image: "/illustrations/chicagoBlue.png"}]
 ---
 
 <LOCItem type="pnp" image="/loc/chicago/hullHouse/postCard.jpg" linkOut="https://www.loc.gov/resource/pcrd.1a03955/"/>
