--- a/src/app/content/chicago/hullHouse.mdx
+++ b/src/app/content/chicago/hullHouse.mdx
@@ -1,5 +1,5 @@
 ---
-title: Culture for the Community
+title: The oldest building on campus
 locationTitle: Jane Addams Hull House Museum
 address: 800 S Halsted St
 location: ["Chicago"] 
