pui tak and palmer square

--- a/src/app/content/chicago/onLeong.mdx
+++ b/src/app/content/chicago/onLeong.mdx
@@ -12,7 +12,7 @@ cardImage: "/loc/chicago/onLeong/header.png"
 stampName: "/illustrations/chicagoRed.png"
 photoPrompt: "See what elements you can spot. There are dragons, butterflies, clouds, and lotus flowers. Can you find the medallions above the second floor windows?"
 blurb:
-stickers: [{image: "/loc/chicago/onLeong/eastElevation.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=5"},{image: "/loc/chicago/onLeong/craneAndFrog.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=12&st=image"}, {image: "/loc/chicago/onLeong/interiorLamp.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=13&st=image"},]
+stickers: [{image: "/loc/chicago/onLeong/eastElevation.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=5"},{image: "/loc/chicago/onLeong/craneAndFrog.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=12&st=image"}, {image: "/loc/chicago/onLeong/interiorLamp.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=13&st=image"}, {image: "/illustrations/chicagoRed.png"}]
 ---
 
 There have been many Chinatowns in Chicago -- since the 1870s, the Chinese community has convened and grown. The first Chinatown was in the Loop, on Clark Street between Adams and Van Buren. With rising tensions and racial discrimination in the late 1800s, especially in the West Coast, Chicago saw its Chinese population increase dramatically.
