--- a/src/app/content/chicago/palmerSquare.mdx
+++ b/src/app/content/chicago/palmerSquare.mdx
@@ -11,20 +11,19 @@ cameraImage: "/loc/chicago/palmerSquare/bikeHeader.jpg"
 cardImage: "/loc/chicago/palmerSquare/bikeHeader.jpg"
 stampName: "/illustrations/chicagoBlue.png"
 photoPrompt:
-blurb:
-stickers: [{image: "/loc/chicago/palmerSquare/bikeSticker.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.28955/"}, {image: "/loc/chicago/palmerSquare/bridget.png", title: "stereograph of Bridget on a bike",linkOut: "https://www.loc.gov/resource/stereo.1s51815/"}, {image: "/loc/chicago/palmerSquare/pf.png", title: "Figure of a man on a 'high wheeler' bicycle in Port Byron, Carol M. Highsmith Photography,",linkOut: "https://www.loc.gov/resource/highsm.59545/"}]
+blurb: It’s a bird, it’s a plane, no-wait, it’s a velocipede! Now a common sight, bicycles were once a novelty in Chicago. Explore the tumultuous history of bicycles in urban spaces.
+stickers: [{image: "/loc/chicago/palmerSquare/bikeSticker.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.28955/"}, {image: "/loc/chicago/palmerSquare/bridget.png", title: "stereograph of Bridget on a bike",linkOut: "https://www.loc.gov/resource/stereo.1s51815/"}, {image: "/loc/chicago/palmerSquare/pf.png", title: "Figure of a man on a 'high wheeler' bicycle in Port Byron, Carol M. Highsmith Photography,",linkOut: "https://www.loc.gov/resource/highsm.59545/"}, {image: "/illustrations/chicagoBlue.png"}]
 ---
 
 Bikes have a long and deep history in Chicago, including in Palmer Square Park, where people used to gather for races around the track.
 
 The initial prototype for the modern-day bicycle was built in 1817 and was called a velocipede. It had no pedals and required riders to run alongside it to gain enough momentum to ride it. If riders gathered enough speed, they could balance and coast.
 
-The first commercially successful design, however, did have pedals. It was also known as a velocipede, but because of its frame and wheels were banded with metal, it earned the name “Boneshaker”.
-
+The first commercially successful design, which didn't come until the 1860's, did have pedals. It was also known as a velocipede, but because of its frame and wheels were banded with metal, it earned the name “Boneshaker”.
 
 <LOCItem type="book" image="/loc/chicago/palmerSquare/velocipede.jpg" caption="An advertisement for the first gymnacyclidium for riding velocipedes" linkOut="https://www.loc.gov/resource/rbpe.34101800/?sp=1" alt="A black and white advertiesement featuring a man and a woman riding early bicycles."/>
 
-Then came the penny-farthing, which was an improvement over the velocipede because its large front wheel allowed for higher speeds. It was called a penny-farthing because the large and small wheels resembled a penny and the smaller UK farthing coin.
+Then came the penny-farthing in the 1870s, which was an improvement over the velocipede because its large front wheel allowed for higher speeds. It was called a penny-farthing because the large and small wheels resembled a penny and the smaller UK farthing coin.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"And you said this is...safer than the velocipede??", position:{col:1, row:1}, size:{width:4, height:2}, style:{outline:"bubble"}},
@@ -35,14 +34,13 @@ Then came the penny-farthing, which was an improvement over the velocipede becau
     {type:"text", src:"And if you hit something, you’re already high up so there’s so much farther to fall.", position:{col:5, row:19}, size:{width:5, height:2}, style:{outline:"bubble"}},
 ]}/>
 
-It’s no wonder that the next iteration of the bicycle, most similar to the bikes we see on the road today, was known as the “safety” bicycle. This bike eventually also gained pneumatic tires, the diamond frame, and chain drive, which, in addition to creating a safer bike, also created a more comfortable, speedy ride.
+It’s no wonder that the next iteration of the bicycle in the 1880s, most similar to the bikes we see on the road today, was known as the “safety” bicycle. This bike eventually also gained pneumatic tires, the diamond frame, and chain drive, which, in addition to creating a safer bike, also created a more comfortable, speedy ride.
 
 In Chicago, there were scores of small bike companies, all manufacturing in the city. Since these companies were centrally located in the country and could take advantage of the distribution system set up by Sears, they could easily ship custom bikes across the United States. Bike clubs became super popular -- when you invested in a bike (which was a costly purchase at the time), you also joined a club to cycle with (you were also consequentially, invited to all sorts of social events, with costume rides, teas, polo matches...).
 
 <LOCItem type="newspaper" caption="Newspaper clipping from the Chicago eagle, highlight a bicycle club in 1897" image="/loc/chicago/palmerSquare/bikeClub.jpg" linkOut="https://www.loc.gov/resource/sn84025828/1897-07-17/ed-1/?sp=2&q=palmer+bicycle&r=0.136,0.558,0.658,0.457,0" alt="A scan of a black and white newspaper with a photo of a group of men posing around a bicycle."/>
 
 Although two-thirds of the bikes in the US were manufactured in Chicago at this time, the city wasn’t immediately welcoming to riders. There were concerns over bicycles damaging the city’s roadways -- the wear of these fast-moving tires would tear them up and degrade them quickly. Pedestrians were also annoyed by the presence of cyclists -- especially here in Palmer Square Park where the Chicago cycling clubs would hold races around the outer path. Called “scorchers”, bicycles were becoming a nationwide problem, and people were duking it out in the court systems and also debating whether it was moral to bike on Sundays.
-
 
 <LOCItem type="pnp" caption="Stereograph of the Bicycle Club, World's Fair Dedication Parade" image="/loc/chicago/palmerSquare/c.jpg" linkOut="https://www.loc.gov/resource/stereo.1s46517/" alt="Stereograph of a group of cyclists riding in formation along a parade route."/>
 
